Создание файла, по которому будет происходить docker build. Настройка конфигурации для docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,11 @@ services:
   app:
     build:
       context: .
+      args:
+        - DEV=true
     ports:
       - "8000:8000"
     volumes:
       - ./app:/app
     command: >
-      sh -c "python mange.pu runserver 0.0.0.0:
-      8000"
+      sh -c "python mange.py runserver 0.0.0.0:8000"
